k8s/hackmd/hackmd.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hackmd
  name: hackmd
  namespace: hackmd
spec:
  replicas: 1
  serviceName: hackmd
  selector:
    matchLabels:
      app: hackmd
  template:
    metadata:
      labels:
        app: hackmd
    spec:
      containers:
        - name: hackmd
          image: ghcr.io/akashisn/hackmd@sha256:ad95cf85671e2444d78b2c5f4394a2a7afcf84fbec06d387758dab79d421dcb5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: hackmd
          volumeMounts:
            - name: secrets
              mountPath: /secrets
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      volumes:
        - name: secrets
          secret:
            secretName: hackmd-secrets
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: hackmd
  name: hackmd
  namespace: hackmd
spec:
  ports:
    - name: hackmd
      port: 3000
      targetPort: hackmd
  selector:
    app: hackmd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hackmd
  namespace: hackmd
  annotations:
    nginx.org/redirect-to-https: "True"
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-request-buffering: "off"
    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hackmd.isec-lab.org
      secretName: letsencrypt-cert
  rules:
    - host: hackmd.isec-lab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hackmd
                port:
                  name: hackmd
